objects/vlocity_cmt__DRWorker__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Each worker represents a possible Apex Batch Job that can be created at run time by the Vlocity DataRaptor service.  Use this to control the number of DataRaptor workers processing batches from the batch queue simultaneously.</description>
    <fields>
        <fullName>vlocity_cmt__Action__c</fullName>
        <description>Action being performed</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApexJobId__c</fullName>
        <description>Job Id of this Worker</description>
        <label>Apex Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>DataRaptor Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRObjectName__c</fullName>
        <description>Name of DataRaptor Object being processed currently.</description>
        <label>DataRaptor Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <description>Status being processed</description>
        <label>DataRaptor Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartedAt__c</fullName>
        <description>Time when DR Batch Job began.</description>
        <label>Started At</label>
        <type>DateTime</type>
    </fields>
    <label>DataRaptor Workers</label>
</CustomObject>